fix: focus state bleeds outside of cell

--- a/packages/components/src/styles/components/advanced-table.scss
+++ b/packages/components/src/styles/components/advanced-table.scss
@@ -87,12 +87,13 @@ $hds-advanced-table-cell-padding-tall: 22px 16px 21px 16px; // the 1px differenc
 
       &:focus,
       &.mock-focus {
+        // the box shadow is 3px wide, so offsetting by 3px so the focus ring doesn't go outside the cell
         @include hds-focus-ring-with-pseudo-element(
-          $top: 1px,
-          $right: 1px,
-          $bottom: 1px,
-          $left: 1px,
-         $radius: inherit,
+          $top: 3px,
+          $right: 3px,
+          $bottom: 3px,
+          $left: 3px,
+          $radius: inherit,
           $position: sticky);
         z-index: 1;
         isolation: isolate;
@@ -322,12 +323,15 @@ $hds-advanced-table-cell-padding-tall: 22px 16px 21px 16px; // the 1px differenc
     background-color: var(--token-color-surface-primary);
 
     &:focus, &.mock-focus{
+      // the box shadow is 3px wide, so offsetting by 3px so the focus ring doesn't go outside the cell
       @include hds-focus-ring-with-pseudo-element(
-        $top: 1px,
-          $right: 1px,
-          $bottom: 1px,
-          $radius: inherit,$left: 1px,
-          $position: sticky);
+        $top: 3px,
+        $right: 3px,
+        $bottom: 3px,
+        $left: 3px,
+        $radius: inherit,
+        $position: sticky
+      );
       z-index: 1;
       isolation: isolate;
     }
